Consegui alinhar o menu no centro e quebrar ele em telas pequenas

--- a/site-flex/index.html
+++ b/site-flex/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="estilo/estilo.css">
   </head>
   <body>
-    <header class="cabecalho">
-      <nav class="menu">
-        <ul>
-          <li>home</li>
-          <li>sobre nós</li>
-          <li>faqs</li>
-          <li>contatos</li>
-        </ul>
-      </nav>
-    </header>
+    <div class="background">
+      <header class="cabecalho">
+        <nav class="menu">
+          <ul>
+            <li>home</li>
+            <li>sobre nós</li>
+            <li>faqs</li>
+            <li>contatos</li>
+          </ul>
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
