Já é uma evolução, falta alinhar algumas coisas

--- a/netflix/index.html
+++ b/netflix/index.html
@@ -7,14 +7,18 @@
       <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-    <div class="background">
-      <header class="cabecalho">
+    
+      <div class="topo">
         <span>Netflix</span>
         <a href="#">entrar</a>
-        <h1>Filmes ilimitados, programas de Tv e muito<br> mais.</h1>
-        <h2>Assista em qualquer lugar. Cancele a qualquer momento.</h2>
-        <p>Pronto para assistir? Digite seu e-mail para criar ou reiniciar sua associação.</p>
-      </header>
-    </div>
+      </div>
+      <div class="span">
+        <header class="cabecalho">
+          <h1>Filmes ilimitados, programas de Tv e muito<br> mais.</h1>
+          <h2>Assista em qualquer lugar. Cancele a qualquer momento.</h2>
+          <p>Pronto para assistir? Digite seu e-mail para criar ou reiniciar sua associação.</p>
+          <input placeholder="endereço de email"><button type="submit">Iniciar ></button>
+        </header>
+      </div>
   </body>
 </html>
