--- a/netflix/index.html
+++ b/netflix/index.html
@@ -17,8 +17,9 @@
           <h1>Filmes ilimitados, programas de Tv e muito<br> mais.</h1>
           <h2>Assista em qualquer lugar. Cancele a qualquer momento.</h2>
           <p>Pronto para assistir? Digite seu e-mail para criar ou reiniciar sua associação.</p>
-          <input placeholder="endereço de email"><button type="submit">Iniciar ></button>
+          <span class="button"><input placeholder=" Endereço de Email"><button type="submit">Iniciar ></button></span>
         </header>
       </div>
+      <div class="tv"></div>
   </body>
 </html>
